k8s/overlays/development/env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  template:
    spec:
      containers:
        - name: php
