k8s/overlays/development/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 80
  - host: bo.localhost
    http:
      paths:
        - path: /
          backend:
            serviceName: bo
            servicePort: 80
